// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter prop 1`] = `
<div class="zv-picker">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">05</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">10</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">15</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">20</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">10</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">20</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">30</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">40</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">50</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`format initial value 1`] = `
<div class="zv-picker">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">22</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">23</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">58</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">59</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`formatter prop 1`] = `
<div class="zv-picker">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00 hour</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">05 hour</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">10 hour</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">15 hour</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">20 hour</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00 minute</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">10 minute</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">20 minute</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">30 minute</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">40 minute</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">50 minute</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;

exports[`max-hour & max-minute 1`] = `
<div class="zv-picker">
  <div class="zv-hairline--top-bottom zv-picker__toolbar"><button type="button" class="zv-picker__cancel">取消</button><button type="button" class="zv-picker__confirm">确认</button></div>
  <!---->
  <div class="zv-picker__columns" style="height: 220px;">
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">01</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">02</li>
      </ul>
    </div>
    <div class="zv-picker-column">
      <ul class="zv-picker-column__wrapper" style="transform: translate3d(0, 88px, 0); transition-duration: 0ms; transition-property: none; line-height: 44px;">
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item zv-picker-column__item--selected" style="height: 44px;">00</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">01</li>
        <li role="button" tabindex="0" class="zv-ellipsis zv-picker-column__item" style="height: 44px;">02</li>
      </ul>
    </div>
    <div class="zv-picker__mask" style="background-size: 100% 88px;"></div>
    <div class="zv-hairline-unset--top-bottom zv-picker__frame" style="height: 44px;"></div>
  </div>
  <!---->
</div>
`;
